[package]
name = "another-mono-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "mono bindgen bindings"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
pkg-config = "0.3.25"
