[package]
name = "another-mono-sys"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "mono bindgen bindings"
links = "mono-2.0"
repository = "https://github.com/markusgod/mono-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
pkg-config = "0.3.25"
